[gd_scene load_steps=17 format=3 uid="uid://b21h2hl74wj75"]

[ext_resource type="Script" path="res://Stages/Levels/Map2.gd" id="1_4cwyk"]
[ext_resource type="Script" path="res://Logic/Evaluation.gd" id="2_7yj2s"]
[ext_resource type="PackedScene" uid="uid://f1qmpxfylu2l" path="res://Assets/Ui/level_ui.tscn" id="2_ry0b8"]
[ext_resource type="Texture2D" uid="uid://coscf3fgqf0y7" path="res://Assets/Sprites/Other/blue sky background.jpg" id="3_hly21"]
[ext_resource type="PackedScene" uid="uid://7jh68784xnck" path="res://Assets/Ui/gaHandler.tscn" id="3_yhuqa"]
[ext_resource type="PackedScene" uid="uid://bki7jmcylgo4l" path="res://Assets/Ui/ExtraMenus/level_defeat.tscn" id="4_51aby"]
[ext_resource type="Texture2D" uid="uid://ce58otdq8ahdk" path="res://Assets/Sprites/Other/towerDefense_tilesheet.png" id="4_aoqf2"]
[ext_resource type="PackedScene" uid="uid://b1rqgw6e3e2b6" path="res://Assets/Ui/ExtraMenus/pause_screen.tscn" id="5_0f4cf"]
[ext_resource type="PackedScene" uid="uid://cr310mcn6um1m" path="res://Assets/Ui/ExtraMenus/level_won.tscn" id="6_ie24o"]
[ext_resource type="Script" path="res://Stages/Levels/Events.gd" id="10_s2o5v"]
[ext_resource type="PackedScene" uid="uid://da374b7iyk0n0" path="res://Assets/Ui/EventUi.tscn" id="11_6k2di"]
[ext_resource type="PackedScene" uid="uid://ynk1cb3jtao0" path="res://Assets/Ui/Rank.tscn" id="12_k7l4r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lnjur"]
radius = 128.0
height = 256.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dro8t"]
size = Vector2(30.2524, 332.549)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wupey"]
texture = ExtResource("4_aoqf2")
texture_region_size = Vector2i(32, 32)
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
13:3/0 = 0
12:3/0 = 0
13:2/0 = 0
12:2/0 = 0
11:2/0 = 0

[sub_resource type="TileSet" id="TileSet_pm2u6"]
tile_size = Vector2i(32, 32)
sources/2 = SubResource("TileSetAtlasSource_wupey")

[node name="Map2" type="Node2D"]
position = Vector2(300, 450)
scale = Vector2(1.00394, 1)
script = ExtResource("1_4cwyk")

[node name="Eval" type="Node" parent="."]
script = ExtResource("2_7yj2s")

[node name="GAUI" parent="." instance=ExtResource("3_yhuqa")]

[node name="LevelDefeat" parent="." instance=ExtResource("4_51aby")]
visible = false

[node name="PauseScreen" parent="." instance=ExtResource("5_0f4cf")]
visible = false

[node name="LevelWon" parent="." instance=ExtResource("6_ie24o")]
visible = false

[node name="TowerSelection" parent="." instance=ExtResource("2_ry0b8")]
process_priority = 1

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(2.51067, 1.14929)
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0

[node name="EnemySpawnPoint" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="EnemySpawnPoint"]
position = Vector2(300, -254)

[node name="EnemyGoal" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="EnemyGoal"]
position = Vector2(300, 870)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyGoal/Area2D"]
scale = Vector2(4.075, 0.85)
shape = SubResource("CapsuleShape2D_lnjur")

[node name="Enemies" type="Node" parent="."]

[node name="Towers" type="Node" parent="."]

[node name="Drops" type="Node" parent="."]
process_priority = 2

[node name="Walls" type="Node" parent="."]

[node name="LeftWall" type="Node" parent="Walls"]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls/LeftWall"]
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall/StaticBody2D"]
light_mask = 4096
visibility_layer = 4096
position = Vector2(-71, 333)
scale = Vector2(1.58997, 3.96333)
shape = SubResource("RectangleShape2D_dro8t")

[node name="RightWall" type="Node" parent="Walls"]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls/RightWall"]
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall/StaticBody2D"]
light_mask = 4096
visibility_layer = 4096
position = Vector2(670, 311)
scale = Vector2(1.58997, 3.96333)
shape = SubResource("RectangleShape2D_dro8t")

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
z_index = -1
scale = Vector2(1.16754, 1.68318)
texture = ExtResource("3_hly21")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 3.05176e-05)
tile_set = SubResource("TileSet_pm2u6")
format = 2
layer_0/tile_data = PackedInt32Array(589816, 1441794, 8, 589817, 1441794, 8, 589818, 1441794, 8, 589819, 1441794, 8, 524283, 1441794, 8, 524284, 1310722, 12, 458748, 1310722, 12, 458749, 1310722, 12, 393213, 1310722, 12, 327677, 1310722, 12, 262141, 1310722, 12, 196605, 1310722, 12, 196604, 1310722, 12, 131068, 1310722, 12, 131067, 1441794, 9, 131066, 1441794, 9, 131065, 1310722, 12, 65529, 1441794, 9, 65530, 1441794, 9, 65528, 1310722, 12, 65527, 1310722, 12, 65526, 1310722, 12, 131062, 1310722, 12, 196598, 1310722, 12, 262134, 1310722, 12, 327670, 1310722, 12, 393206, 1310722, 12, 458742, 1441794, 8, 524278, 1441794, 8, 589814, 1441794, 8, 524279, 1441794, 8, 524280, 1441794, 8, 524281, 1441794, 8, 524282, 1441794, 8, 458746, 1441794, 8, 458747, 1441794, 8, 393212, 1310722, 12, 327676, 1310722, 12, 262140, 1310722, 12, 327675, 1310722, 12, 393211, 1310722, 12, 262139, 1310722, 12, 196603, 1310722, 12, 196602, 1310722, 12, 262138, 1310722, 12, 327674, 1310722, 12, 393210, 1441794, 8, 196601, 1310722, 12, 262137, 1310722, 12, 327673, 1310722, 12, 393209, 1441794, 8, 458745, 1441794, 8, 196600, 1310722, 12, 131064, 1310722, 12, 131063, 1310722, 12, 196599, 1310722, 12, 262135, 1310722, 12, 327671, 1310722, 12, 393208, 1441794, 8, 458744, 1441794, 8, 327672, 1310722, 12, 262136, 1310722, 12, 393207, 1441794, 8, 458743, 1441794, 8, 524295, 1441794, 8, 524296, 1441794, 8, 458760, 1441794, 8, 458759, 1441794, 8, 458758, 1441794, 8, 524294, 1441794, 8, 589831, 1441794, 8, 589832, 1441794, 8, 524297, 1441794, 8, 458761, 1441794, 8, 393224, 1441794, 8, 393223, 1441794, 8, 131081, 1310722, 12, 131080, 1310722, 12, 131079, 1310722, 12, 65543, 1310722, 12, 65542, 1310722, 12, 65541, 1441794, 8, 5, 1441794, 8, 4, 1441794, 9, -65532, 1441794, 9, -131068, 1441794, 9, -131069, 1441794, 9, -196605, 1441794, 9, -262141, 1310722, 12, -262140, 1441794, 9, -327676, 1310722, 12, -327675, 1310722, 12, -393211, 1310722, 12, -393210, 1310722, 12, -458746, 1310722, 12, -458745, 1310722, 12, -524281, 1310722, 12, -524280, 1310722, 12, -524279, 1310722, 12, -458743, 1310722, 12, -393207, 1310722, 12, -327671, 1310722, 12, -262135, 1310722, 12, -196599, 1310722, 12, -131063, 1310722, 12, -65527, 1310722, 12, 65545, 1310722, 12, 9, 1310722, 12, 8, 1310722, 12, 65544, 1310722, 12, -65528, 1310722, 12, -131064, 1310722, 12, -196600, 1310722, 12, -262136, 1310722, 12, -327672, 1310722, 12, -393208, 1310722, 12, -458744, 1310722, 12, -393209, 1310722, 12, -327673, 1310722, 12, -327674, 1310722, 12, -262138, 1310722, 12, -196602, 1441794, 8, -196601, 1310722, 12, -131065, 1441794, 8, -65529, 1441794, 8, 7, 1310722, 12, 6, 1441794, 8, -65530, 1441794, 8, -131066, 1441794, 8, -196603, 1441794, 8, -262139, 1441794, 8, -196604, 1441794, 9, -131067, 1441794, 8, -65531, 1441794, 8, -262137, 1310722, 12, -655356, 1310722, 12, -655355, 1310722, 12, -720891, 1310722, 12, -720890, 1310722, 12, -786426, 1310722, 12, -851962, 1310722, 12, -851963, 1310722, 12, -851964, 1310722, 12, -851965, 1310722, 12, -786429, 1310722, 12, -786428, 1310722, 12, -720892, 1310722, 12, -786427, 1310722, 12, -720893, 1310722, 12, -917500, 1310722, 12, -917499, 1310722, 12, -196617, 1310722, 12, -196616, 1310722, 12, -196615, 1310722, 12, -196614, 1441794, 9, -131078, 1441794, 9, -131079, 1441794, 9, -131077, 1441794, 9, -196613, 1441794, 9, -196612, 1310722, 12, -196611, 1310722, 12, -196610, 1310722, 12, -262146, 1310722, 12, -327682, 1310722, 12, -327681, 1310722, 12, -393217, 1441794, 8, -393218, 1441794, 8, -458754, 1441794, 9, -524290, 1441794, 9, -458753, 1441794, 9, -524291, 1441794, 8, -589827, 1441794, 8, -589828, 1441794, 8, -655364, 1310722, 12, -655365, 1310722, 12, -655366, 1310722, 12, -655367, 1310722, 12, -655368, 1310722, 12, -655369, 1310722, 12, -589833, 1310722, 12, -589834, 1310722, 12, -524298, 1310722, 12, -458762, 1310722, 12, -393226, 1310722, 12, -327690, 1310722, 12, -327689, 1310722, 12, -262153, 1310722, 12, -262154, 1310722, 12, -196618, 1310722, 12, -262152, 1310722, 12, -262151, 1310722, 12, -262150, 1310722, 12, -262149, 1310722, 12, -262148, 1310722, 12, -262147, 1310722, 12, -327683, 1310722, 12, -327684, 1310722, 12, -327685, 1310722, 12, -327686, 1310722, 12, -327687, 1310722, 12, -327688, 1310722, 12, -393224, 1310722, 12, -393225, 1310722, 12, -458761, 1310722, 12, -458760, 1310722, 12, -458759, 1310722, 12, -393223, 1310722, 12, -393222, 1310722, 12, -393221, 1310722, 12, -393220, 1310722, 12, -458755, 1441794, 8, -458756, 1441794, 8, -458757, 1310722, 12, -458758, 1310722, 12, -524297, 1310722, 12, -524296, 1310722, 12, -524295, 1310722, 12, -524294, 1310722, 12, -524293, 1310722, 12, -524292, 1441794, 8, -589829, 1310722, 12, -589830, 1310722, 12, -589831, 1310722, 12, -589832, 1310722, 12, 589815, 1441794, 8, 655350, 1310722, 12, 655351, 1441794, 8, 655352, 1441794, 8, 655353, 1441794, 8, 655354, 1441794, 8, 655355, 1310722, 12, 655356, 1310722, 12, 655357, 1310722, 12, 655358, 1310722, 12, 655359, 1310722, 12, 589824, 1376258, 12, 589825, 1310722, 12, 589826, 1310722, 12, 589827, 1310722, 12, 589829, 1441794, 8, 589830, 1441794, 8, 655366, 1310722, 12, 655367, 1310722, 12, 655368, 1310722, 12, 655369, 1310722, 12, 720905, 1310722, 12, 786441, 1310722, 12, 851977, 1310722, 12, 851976, 1310722, 12, 851974, 1310722, 12, 851973, 1310722, 12, 851972, 1310722, 12, 851971, 1310722, 12, 851970, 1310722, 12, 851969, 1310722, 12, 851968, 1310722, 12, 917503, 1310722, 12, 917502, 1310722, 12, 917501, 1310722, 12, 917500, 1310722, 12, 917499, 1310722, 12, 917498, 1310722, 12, 917497, 1310722, 12, 917496, 1310722, 12, 917495, 1310722, 12, 917494, 1310722, 12, 851958, 1310722, 12, 786422, 1310722, 12, 720886, 1310722, 12, 786423, 1310722, 12, 786424, 1310722, 12, 786425, 1310722, 12, 786426, 1310722, 12, 786427, 1310722, 12, 786428, 1310722, 12, 786429, 1310722, 12, 786438, 1310722, 12, 851959, 1310722, 12, 851960, 1310722, 12, 851961, 1310722, 12, 851962, 1310722, 12, 851963, 1310722, 12, 851964, 1310722, 12, 851965, 1310722, 12, 851966, 1310722, 12, 786432, 1310722, 12, 786433, 1310722, 12, 786434, 1310722, 12, 786435, 1310722, 12, 786436, 1310722, 12, 786437, 1310722, 12, 786439, 1310722, 12, 786440, 1310722, 12, 720904, 1310722, 12, 720903, 1310722, 12, 720902, 1310722, 12, 720901, 1310722, 12, 720900, 1310722, 12, 720899, 1310722, 12, 720898, 1310722, 12, 720897, 1310722, 12, 720896, 1441794, 8, 786431, 1441794, 8, 786430, 1310722, 12, 720887, 1310722, 12, 720888, 1310722, 12, 720889, 1310722, 12, 720890, 1310722, 12, 720891, 1310722, 12, 720892, 1310722, 12, 720893, 1310722, 12, 720894, 1310722, 12, 720895, 1441794, 8, 655360, 1441794, 8, 655361, 1310722, 12, 655362, 1310722, 12, 655363, 1310722, 12, 655364, 1310722, 12, 655365, 1310722, 12, 524293, 1441794, 8, 458757, 1441794, 8, 393221, 1441794, 8, 393222, 1441794, 8, 327686, 1441794, 8, 327687, 1441794, 8, 262151, 1310722, 12, 262152, 1310722, 12, 327688, 1441794, 8, 327689, 1310722, 12, 393225, 1441794, 8, 262153, 1310722, 12, 196617, 1310722, 12, 196616, 1310722, 12, 196615, 1310722, 12, 196614, 1310722, 12, 131078, 1310722, 12, 131077, 1310722, 12, 131076, 1310722, 12, 65540, 1441794, 9, 65539, 1310722, 12, 3, 1441794, 9, -65533, 1441794, 9, -65534, 1441794, 9, -131070, 1441794, 9, -196606, 1310722, 12, -262142, 1310722, 12, -327678, 1310722, 12, -327677, 1310722, 12, -393213, 1310722, 12, -393212, 1310722, 12, -458748, 1310722, 12, -458747, 1310722, 12, -524283, 1310722, 12, -524282, 1310722, 12, -589818, 1310722, 12, -589817, 1310722, 12, -589816, 1310722, 12, -655352, 1310722, 12, -720888, 1310722, 12, -786424, 1310722, 12, -851960, 1310722, 12, -917496, 1310722, 12, -917497, 1310722, 12, -917498, 1310722, 12, -851961, 1310722, 12, -786425, 1310722, 12, -720889, 1310722, 12, -655353, 1310722, 12, -655351, 1310722, 12, -589815, 1310722, 12, -720887, 1310722, 12, -786423, 1310722, 12, -851959, 1310722, 12, -917495, 1310722, 12, -655354, 1310722, 12, -589819, 1310722, 12, -589820, 1310722, 12, -589821, 1441794, 8, -655357, 1441794, 8, -655358, 1441794, 9, -720894, 1441794, 8, -786430, 1310722, 12, -851966, 1310722, 12, -917502, 1310722, 12, -917501, 1310722, 12, -917503, 1310722, 12, -917504, 1310722, 12, -851969, 1310722, 12, -851970, 1310722, 12, -851971, 1310722, 12, -851972, 1310722, 12, -851973, 1310722, 12, -851974, 1310722, 12, -851975, 1310722, 12, -851976, 1310722, 12, -851977, 1310722, 12, -851978, 1310722, 12, -786442, 1310722, 12, -720906, 1310722, 12, -655370, 1310722, 12, -720905, 1310722, 12, -786441, 1310722, 12, -786440, 1310722, 12, -720904, 1310722, 12, -720903, 1310722, 12, -720902, 1310722, 12, -720901, 1310722, 12, -786437, 1310722, 12, -786436, 1310722, 12, -786435, 1310722, 12, -720899, 1310722, 12, -655363, 1441794, 8, -720900, 1310722, 12, -786438, 1310722, 12, -786439, 1310722, 12, -655362, 1441794, 9, -589826, 1441794, 9, -589825, 1441794, 9, -524289, 1441794, 9, -589824, 1441794, 9, -524288, 1441794, 9, -458752, 1441794, 8, -393216, 1310722, 12, -327680, 1441794, 8, -262145, 1441794, 8, -196609, 1441794, 8, -131073, 1310722, 12, -131074, 1310722, 12, -131075, 1310722, 12, -131076, 1441794, 9, -65540, 1441794, 9, -65541, 1441794, 9, -65542, 1441794, 9, -65543, 1441794, 9, -65544, 1441794, 9, -65545, 1310722, 12, -131081, 1310722, 12, -131080, 1310722, 12, -131082, 1310722, 12, -10, 1310722, 12, -65546, 1310722, 12, -9, 1310722, 12, -8, 1441794, 9, -7, 1441794, 9, -6, 1441794, 9, -5, 1441794, 9, 65531, 1441794, 9, 65532, 1441794, 9, 65533, 1310722, 12, 131069, 1310722, 12, 131070, 1310722, 12, 196606, 1310722, 12, 262142, 1310722, 12, 327678, 1310722, 12, 393214, 1310722, 12, 458750, 1310722, 12, 524286, 1310722, 12, 524285, 1310722, 12, 589821, 1310722, 12, 589820, 1310722, 12, 589822, 1310722, 12, 589823, 1310722, 12, 524292, 1441794, 8, 524291, 1310722, 12, 458756, 1441794, 8, 393220, 1441794, 8, 327685, 1441794, 8, 262150, 1310722, 12, 196613, 1310722, 12, 196612, 1310722, 12, 262148, 1310722, 12, 458755, 1310722, 12, 262149, 1310722, 12, 327683, 1310722, 12, 327682, 1310722, 12, 393218, 1310722, 12, 458754, 1310722, 12, 458753, 1310722, 12, 458752, 1310722, 12, 524289, 1310722, 12, 524290, 1310722, 12, 524287, 1310722, 12, 393219, 1310722, 12, 262147, 1310722, 12, 196611, 1310722, 12, 131075, 1310722, 12, 2, 1310722, 12, 65538, 1310722, 12, 131074, 1310722, 12, 196610, 1310722, 12, 262146, 1310722, 12, 131073, 1310722, 12, 65537, 1310722, 12, 1, 1310722, 12, -65535, 1310722, 12, -131072, 1310722, 12, -196608, 1310722, 12, -262144, 1441794, 8, -327679, 1310722, 12, -393215, 1310722, 12, -458751, 1441794, 8, -524287, 1441794, 9, -589823, 1441794, 9, -589822, 1441794, 9, -524286, 1441794, 9, -458750, 1441794, 8, -393214, 1310722, 12, -131071, 1310722, 12, -196607, 1310722, 12, -262143, 1310722, 12, -524285, 1441794, 8, -458749, 1310722, 12, -524284, 1310722, 12, -655359, 1441794, 9, -720895, 1441794, 9, -786431, 1441794, 9, -851967, 1310722, 12, -851968, 1310722, 12, -786433, 1310722, 12, -786434, 1310722, 12, -720898, 1441794, 9, -720897, 1441794, 9, -786432, 1441794, 9, -720896, 1441794, 8, -655360, 1441794, 9, -655361, 1441794, 9, -4, 1441794, 9, -3, 1441794, 9, -65539, 1441794, 9, -65538, 1310722, 12, -65537, 1310722, 12, -65536, 1310722, 12, 0, 1310722, 12, 65536, 1310722, 12, 65534, 1310722, 12, -2, 1310722, 12, -1, 1310722, 12, 65535, 1310722, 12, 131071, 1310722, 12, 196607, 1310722, 12, 262143, 1441794, 8, 327679, 1441794, 8, 393215, 1310722, 12, 458751, 1310722, 12, 393216, 1310722, 12, 393217, 1310722, 12, 327681, 1310722, 12, 327680, 1310722, 12, 262144, 1441794, 8, 196608, 1441794, 8, 196609, 1310722, 12, 262145, 1310722, 12, 131072, 1310722, 12, 589833, 1310722, 12, 589828, 1310722, 12, 327684, 1310722, 12, -393219, 1441794, 9, 851975, 1310722, 12, 851967, 1310722, 12, 524288, 1310722, 12)

[node name="EnemyDropTimers" type="Node2D" parent="."]

[node name="SpawnCluster" type="Timer" parent="EnemyDropTimers"]

[node name="SpawnBurst" type="Timer" parent="EnemyDropTimers"]

[node name="Events" type="Node" parent="."]
script = ExtResource("10_s2o5v")

[node name="EventNotif" parent="Events" instance=ExtResource("11_6k2di")]

[node name="NotifEnd" type="Marker2D" parent="Events"]
position = Vector2(40, 500)

[node name="NotifStart" type="Marker2D" parent="Events"]
position = Vector2(-311, 500)

[node name="EventDuration" type="Timer" parent="Events"]
wait_time = 5.0

[node name="Rank" type="Node" parent="."]

[node name="RankNotif" parent="Rank" instance=ExtResource("12_k7l4r")]
follow_viewport_scale = 0.001

[connection signal="packet_recieved" from="GAUI" to="." method="next_level_loading"]
[connection signal="main_menu_swap" from="LevelDefeat" to="." method="_on_pause_screen_main_menu_swap"]
[connection signal="retry" from="LevelDefeat" to="." method="_on_pause_retry_level"]
[connection signal="main_menu_swap" from="PauseScreen" to="." method="_on_pause_screen_main_menu_swap"]
[connection signal="quit_game" from="PauseScreen" to="." method="_on_pause_screen_quit_game"]
[connection signal="unpause" from="PauseScreen" to="." method="unpause_screen"]
[connection signal="main_menu_swap" from="LevelWon" to="." method="_on_pause_screen_main_menu_swap"]
[connection signal="next_level" from="LevelWon" to="." method="_on_screen_next_level"]
[connection signal="newRound" from="TowerSelection" to="." method="next_round_start"]
[connection signal="body_entered" from="EnemyGoal/Area2D" to="." method="_on_body_entered_goal"]
[connection signal="timeout" from="EnemyDropTimers/SpawnCluster" to="." method="new_enemy_group_spawn"]
[connection signal="timeout" from="EnemyDropTimers/SpawnBurst" to="." method="spawn_enemy"]
[connection signal="eventBegin" from="Events/EventNotif" to="." method="startEvent"]
[connection signal="timeout" from="Events/EventDuration" to="." method="endEvent"]
